# plant-science-paradigm-shift

./: .gitignore  .zenodo.json  CITATION.cff  DATA.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
code/: __init__.py
code/analysis/paper_a/: organism_citations.py  organism_collaboration.py  organism_stratified_concepts.py  (+10 more)
code/biblio/: __init__.py  cross_field_comparison.py  powerlaw_fitting.py  productivity.py  subfield_laws.py  temporal.py
code/collect/: __init__.py  openalex_api.py  openalex_ingest.py  openalex_snapshot.py  pubmed_api.py  pubmed_ingest.py
code/db/: __init__.py  clean.py  schema.py
code/dynamics/: __init__.py  emerging_fronts.py  gender_diversity.py
code/network/: __init__.py  citation_graph.py  coauthor_graph.py
code/nlp/: __init__.py  classify_paper_a.py  embeddings.py  export_abstracts.py  export_abstracts_local.py  topic_model.py
code/novel/: concept_drift.py  concept_lifecycle.py  concept_marriage.py  disruption_index.py  hypothesis_density.py  knowledge_topology.py  method_diffusion.py  orphan_organisms.py  question_dynamics.py  sleeping_beauty_crops.py
code/utils/: __init__.py  checkpointing.py  storage_monitor.py
code/viz/: __init__.py  paper_a_figures.py  paper_a_gpu_figures.py
config/: api_keys.env.template  journal_list.csv  mesh_terms.json  openalex_concepts.json  storage_budget.yaml
manuscript/: Makefile  main.tex  references.bib
manuscript/sections/: extended_data.tex  item_lists.tex  main_text.tex  methods.tex  supplementary.tex
reproducibility/: README.md  create_sample_db.py
(+60 files in other folders)
