[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plant-science-metascience"
version = "0.1.0"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tools/reviewer/tests", "tools/robustness/tests", "tools/insights/tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
